fix moves overflow styling

--- a/client/src/ui/GameRoom/sidePanel/moves/moves.scss
+++ b/client/src/ui/GameRoom/sidePanel/moves/moves.scss
@@ -62,6 +62,7 @@ $alt-color: #bf8b69;
         // color: #616060;
         // color: #b3b3b3;
         span{
+            width: 100%;
             // border-bottom: 1px solid #777777;
             text-align: right;
             height: 5vh;
@@ -109,6 +110,7 @@ $alt-color: #bf8b69;
 
         flex: 0 0 43.5%;
         move {
+            flex-shrink: 0;
             border-bottom-width: 1px;
             font-weight: 600;
             display: flex;
